[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "balderdash"
author = "Elmer de Looff"
author-email = "elmer.delooff@gmail.com"
home-page = "https://github.com/edelooff/balderdash"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]
requires = ["lark-parser"]
requires-python = ">=3.8"
description-file = "README.md"

[tool.flit.scripts]
balderdash = "balderdash:main"