[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "balderdash"
author = "Elmer de Looff"
author-email = "elmer.delooff@gmail.com"
home-page = "https://github.com/edelooff/balderdash"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]
requires = ["lark-parser"]
requires-python = ">=3.8"
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["nox"]

[tool.flit.scripts]
balderdash = "balderdash:main"

[tool.coverage.run]
branch = true
source = ["balderdash"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
profile = "black"
atomic = true